# syncfolder

./: .gitignore  .gitmodules  CMakeLists.txt  DMEditor.pro  EditorDelegate.h  FileIconProvider.cpp  FileLocatorWindow.cpp  FileLocatorWindow.h  FullTextSearchWindow.cpp  FullTextSearchWindow.h  ISettingPage.h  configurationpage.cpp  configurationpage.h  dmfileiconprovider.cpp  dmfileiconprovider.h  editerdelegate.h  fileformat.cpp  fileformat.h  findfilewindow.cpp  findfilewindow.h  fulltextsearchwidow.h  fulltextsearchwindow.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowbuilder.h  resources.qrc  searchwindow.cpp  searchwindow.h  settingdialog.cpp  settingdialog.h  syncapp.cpp  syncapp.h  ui_mainwindow_helper.h
ag_2_2_0/: Makefile  ag  config.status
ag_2_2_0/src/: print.c
ag_2_2_0/src/.deps/: decompress.Po  ignore.Po  lang.Po  log.Po  main.Po  options.Po  print.Po  print_w32.Po  scandir.Po  search.Po  util.Po  zfile.Po
animations/: sync.apng
config/: Info.plist  org-protocol.desktop
qmarkdowntextedit/: LineNumberArea.cpp  LineNumberArea.h  highlighter.cpp  highlighter.h  mainwindow.h  qmarkdowntextedit-headers.pri  qmarkdowntextedit-sources.pri  qmarkdowntextedit.cpp  qmarkdowntextedit.h
settings/: settings_def.h
translations/: syncfolder_zh_CN.qm  syncfolder_zh_CN.ts
uiwidgets/: CircleProgressBar.h  DisplayQueuedFilesAction.cpp  MarkdownPreviewView.cpp  MarkdownPreviewView.h  MarkdownPreviewWebPage.cpp  MarkdownPreviewWebPage.h  ProgressCircle.cpp  displayqueuedfilesaction.cpp  displayqueuedfilesaction.h
web_res/: scidown_article.css  scidown_report.css  test.html
